--- a/templates/home.html
+++ b/templates/home.html
@@ -1,57 +1,33 @@
 <!doctype html> 
 <html>
   <head>
-    <title>Ps Careers</title>
+    <title>Ps {{company_name}} Careers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      body{
-        font-family : Roboto
+      #careerImage {
+        height: 360px;
+        width: 100%;
+        object-fit: cover;
+        margin-bottom: 16px;
       }
-      
-      h1{
-        font-size:40px;
-        font-family : Roboto;
-        font-weight: normal;
-        color : rgb(50,50,50);
-        text-align: center;
-      }
-      
-      h2{
-        font-size:32px;
-        font-family : Roboto;
-        font-weight: normal;
-        color : rgb(100,100,100);
-        text-align: center;
-      }
-      #careerImage{
-        width:100%;
-        height : 360px;
-        object-fit:cover
-      }
-      
-      .bodyText{
-        font-family : Roboto;
-        color : rgb(80,80,80);
-      }
-
-      #container{
-        max-width:720px;
-        margin: 0 auto;
-      }
-      
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1>Hello There you'll Learn about career openings here. </h1>
-      <img id="careerImage" src="static/career.jpg">
-      <h2>About Ps careers</h2>
-      <p class="bodyText">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, recusandae quisquam assumenda corrupti repellendus accusantium natus totam, cum consectetur eum possimus modi! Nesciunt voluptas dolorum culpa rerum. Sit, saepe temporibus facilis aliquid iusto voluptatem omnis hic, atque minima nemo corporis repudiandae sed aperiam impedit nulla cumque ea dicta accusamus. Iure?</p>
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">Hello There you'll Learn about career openings here. </h1>
+      <img id="careerImage" class="img-fluid" src="static/career.jpg">
+      <h2 class="text-center mt-2 mb-4">About Ps careers</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, recusandae quisquam assumenda corrupti repellendus accusantium natus totam, cum consectetur eum possimus modi! Nesciunt voluptas dolorum culpa rerum. Sit, saepe temporibus facilis aliquid iusto voluptatem omnis hic, atque minima nemo corporis repudiandae sed aperiam impedit nulla cumque ea dicta accusamus. Iure?</p>
     
   
-      <h2>Open Positions</h2>
-      <p class="bodyText">TODO - Show the jobs here</p>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <div>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>
       <div style="text-align:center;">
-        <button>Contact Us</button>
+        <button class="btn btn-primary btn-lg">Contact Us</button>
       </div>
       <p>Copyright &copy; 2024, Ps Careers</p>
 
