--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -12,7 +12,7 @@
   </div>
   
   <div class="col-3">
-    <button type="button" class="btn btn-outline-primary float-right align-middle" >Apply</button>
+    <a href="mailto:hello@fresher.ps?subject=Application%20for%20the%20position%20{{job['title']}}&body=My%20Name%20%3A%20%3Cyour%20name%3E%0D%0AMy%20Resume%20Link%20%3A%20%3CResume%20Link%3E%0D%0AMy%20Linkedin%20Link%20%3A%20%3Cattach%20linkedin%20link%3E%0D%0A%0D%0A%0D%0A%0D%0A" type="button" class="btn btn-outline-primary float-right align-middle" >Apply</a>
   </div>
   
   
